@@ -423,7 +423,10 @@
 502: Day Mode is activated
 503: Night Mode is activated
 
-// 504~506 are not used (previously super novice's guardian angel prayer)
+// Cash point change messages
+504: Used %d kafra points and %d cash points. %d kafra and %d cash points remaining.
+505: Gained %d cash points. Total %d points.
+506: Gained %d kafra points. Total %d points.
 
 // Trade Spoof Messages
 507: This player has been banned for %d minute(s).
